xhr and css added

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-GB">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>fetch-xhr</title>
-    <meta name="description" content="" />
+    <meta name="description" content="fetch vs xhr client side request" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="index.css" />
+    <link rel="shortcut icon" type="image/icon" href="favicon.ico" />
   </head>
   <body>
-    <button class="button__fetch">Fetch</button>
-
+    <p>Open the console in dev tools for results</p>
+    <button class="button button__fetch">Fetch</button>
+    <button class="button button__xhr">xhr</button>
     <script src="fetch.js" async defer></script>
+    <script src="xhr.js" async defer></script>
   </body>
 </html>
