--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>fetch-xhr</title>
     <meta name="description" content="fetch vs xhr client side request" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="index.css" />
-    <link rel="shortcut icon" type="image/icon" href="favicon.ico" />
+    <link rel="stylesheet" href="public/index.css" />
+    <link rel="shortcut icon" type="image/icon" href="public/favicon.ico" />
   </head>
   <body>
     <p>Open the console in dev tools for results</p>
     <button class="button button__fetch">Fetch</button>
     <button class="button button__xhr">xhr</button>
-    <script src="fetch.js" async defer></script>
-    <script src="xhr.js" async defer></script>
+    <script src="src/fetch.js" async defer></script>
+    <script src="src/xhr.js" async defer></script>
   </body>
 </html>
